[WN] fun-framework-core-springboot